<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >
    <com.touguyun.view.TitleBar_
        android:id="@id/touguyun_titleBar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:bartitle="@string/comment_create_title"
        app:leftText="@string/cancel"
        app:rightText="@string/release"
        app:textColor="@color/black_232323"
        app:rightColor="@color/blue_107CDB"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <EditText
            android:id="@+id/comment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="23dp"
            android:paddingRight="23dp"
            android:paddingBottom="16dp"
            android:background="@null"
            android:focusable="true"
            android:gravity="top|left"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxLength="500"
            android:minHeight="220dp"
            android:textColor="@color/black_232323"
            android:textColorHint="@color/gray_939393"
            android:textSize="@dimen/sp_16"
            android:hint="@string/comment_create_edit_hint"
            >

            <requestFocus />

        </EditText>
    </ScrollView>
</LinearLayout>
