<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >
    <com.touguyun.view.TitleBar_
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:bartitle="@string/combination_filter_title"
        app:leftIcon="@drawable/back_icon_black"
        app:textColor="@color/black_232323"
        />
    <TextView
        android:id="@+id/comb_filter_item1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/sp_17"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:singleLine="true"
        android:gravity="left|center_vertical"
        android:text="@string/combination_filter_item1"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_e5e5e5"
        />
    <TextView
        android:id="@+id/comb_filter_item2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/sp_17"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:singleLine="true"
        android:gravity="left|center_vertical"
        android:text="@string/combination_filter_item2"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_e5e5e5"
        />
    <TextView
        android:id="@+id/comb_filter_item3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/sp_17"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:singleLine="true"
        android:gravity="left|center_vertical"
        android:text="@string/combination_filter_item3"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_e5e5e5"
        />
    <TextView
        android:id="@+id/comb_filter_item4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/sp_17"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:singleLine="true"
        android:gravity="left|center_vertical"
        android:text="@string/combination_filter_item4"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_e5e5e5"
        />
</LinearLayout>
