<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccffffff">

    <TextView
        android:id="@+id/get_photo_popu_postion"
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"/>

    <com.touguyun.view.CircleAngleTitleView
        android:id="@+id/get_photo_popu_camre"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/get_photo_popu_camre"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        app:backColor="#de3eabfe"
        app:frameWidth="2dp"
        app:frameColor="@android:color/white"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/get_photo_popu_postion"/>

    <com.touguyun.view.CircleAngleTitleView
        android:id="@+id/get_photo_popu_select"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/get_photo_popu_select"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        app:backColor="#de3eabfe"
        app:frameWidth="2dp"
        app:frameColor="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/get_photo_popu_postion" />


    <com.touguyun.view.CircleAngleTitleView
        android:id="@+id/get_photo_popu_cancel"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/get_photo_popu_select"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        app:backColor="#deEE6A50"
        app:frameWidth="2dp"
        app:frameColor="@android:color/white"
        android:layout_marginTop="60dp"/>

</RelativeLayout>