<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/register_bg"
                >
    <com.touguyun.view.TitleBar_
        android:id="@id/touguyun_titleBar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:textColor="@color/white"
        app:showLine="false"
        app:bartitle="@string/register_code_title"
        app:leftIcon="@drawable/back_icon_wihte"
        />
    <TextView
        android:id="@+id/register_two_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="9dp"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_17"
        android:text="1830000000"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        >
        <EditText
            android:id="@+id/register_two_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/register_code_hint"
            android:gravity="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_18"
            android:inputType="phone"
            android:maxLength="6"
            />

        <ImageView
            android:id="@+id/register_two_edit_clear"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/text_del_icon"
            android:layout_centerVertical="true"
            android:visibility="gone"
            />
        </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        />

    <com.touguyun.view.CircleAngleTitleView
        android:id="@+id/regisger_code_next"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:text="@string/register_next"
        app:backColor="@color/red_EB7D8C"
        app:radiusOfCorner="3dp"
        app:frameColor="@color/red_EB7D8C"
        />

    <TextView
        android:id="@+id/regisger_code_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/white"
        android:text="59秒后重新发送"
        />
</LinearLayout>
