<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/register_bg"
            >
    <com.touguyun.view.TitleBar_
        android:id="@id/touguyun_titleBar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:textColor="@color/white"
        app:showLine="false"
        app:bartitle="@string/login_title"
        />
    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginTop="45dp"-->
        <!-->-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="45dp"
            android:paddingBottom="50dp"
            >
            <ImageView
                android:id="@+id/login_go_back"
                android:layout_width="26dp"
                android:layout_height="36dp"
                android:layout_gravity="right|top"
                android:layout_marginRight="30dp"
                android:src="@drawable/login_back_icon"
                />
    <LinearLayout
        android:id="@+id/login_input_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/login_input_layout_bg"
        >
        <EditText
            android:id="@+id/login_phone_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/login_input_phonenum"
            android:textColorHint="@color/gray_B4B4B4"
            android:textColor="@color/black_323232"
            android:textSize="@dimen/sp_14"
            android:inputType="phone"
            android:maxLength="11"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_c8c8c8"
            />
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/login_input_password"
            android:textColorHint="@color/gray_B4B4B4"
            android:textColor="@color/black_323232"
            android:textSize="@dimen/sp_14"
            android:inputType="textPassword"
            android:maxLength="18"
            />
    </LinearLayout>

    <com.touguyun.view.CircleAngleTitleView
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:backColor="@color/red_EB7D8C"
        app:frameColor="@color/red_EB7D8C"
        app:radiusOfCorner="3dp"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:text="@string/login_title"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/login_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:text="@string/login_forgot_pass"
        android:textStyle="bold"
        />
    <LinearLayout
        android:id="@+id/login_third_title"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/login_forgot_pass"
        android:orientation="horizontal"

        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="第三方登录"
            android:textSize="@dimen/sp_17"
            android:textColor="@color/white"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            />
        </LinearLayout>
    <RelativeLayout
        android:id="@+id/login_third_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_third_title"
        android:layout_marginTop="23dp"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/login_third_wx_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/login_third_wechat"
            android:drawablePadding="7dp"
            android:text="微信"
            />
        <TextView
            android:id="@+id/login_third_qq_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:drawableTop="@drawable/login_third_qq"
            android:drawablePadding="7dp"
            android:text="QQ"
            />
        <TextView
            android:id="@+id/login_third_sina_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_alignParentRight="true"
            android:drawableTop="@drawable/login_third_sina"
            android:drawablePadding="7dp"
            android:text="微博"
            />



        </RelativeLayout>
        </LinearLayout>
    <!--</ScrollView>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="#ccF65066"
        >
        <TextView
            android:id="@+id/login_user_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:gravity="center"
            android:text="@string/login_user_register"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            />
        <TextView
            android:id="@+id/login_tougu_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:gravity="center"
            android:text="@string/login_tougu_register"
            />
        </LinearLayout>
</RelativeLayout>
