<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        >
        <TextView
            android:id="@id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black_333333"
            />
        <com.touguyun.view.CircleAngleTitleView
            android:id="@id/item_tag"
            android:layout_width="27dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/item_title"
            android:layout_alignBottom="@id/item_title"
            android:layout_alignTop="@id/item_title"
            android:layout_marginLeft="7dp"
            android:gravity="center"
            app:backColor="@color/red_FD4E4E"
            app:frameColor="@color/red_FD4E4E"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13"
            />
        <TextView
            android:id="@id/item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="19dp"
            android:textColor="@color/black_232323"
            android:textSize="@dimen/sp_13"
            />

        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="13"
            >
            <TextView
                android:id="@id/item_buy_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/gray_9b9b9b"
                android:singleLine="true"
                android:text="@string/trading_records_buy_price"
                />
            <TextView
                android:id="@id/item_buy_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:singleLine="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/black_232323"
                android:gravity="right"
                />

            </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="20"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            >
            <TextView
                android:id="@id/item_buy_amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/gray_9b9b9b"
                android:singleLine="true"
                android:text="@string/trading_records_buy_amount"
                />
            <TextView
                android:id="@id/item_buy_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:singleLine="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/black_232323"
                android:gravity="right"
                />

            </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="13"
            >
            <TextView
                android:id="@id/item_buy_count_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/gray_9b9b9b"
                android:singleLine="true"
                android:text="@string/trading_records_buy_count"
                />
            <TextView
                android:id="@id/item_buy_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:singleLine="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/black_232323"
                android:gravity="right"
                />

            </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="20"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            >
            <TextView
                android:id="@id/item_position_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/gray_9b9b9b"
                android:singleLine="true"
                android:text="@string/trading_records_position"
                />
            <TextView
                android:id="@id/item_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/black_232323"
                android:gravity="right"
                />

            </RelativeLayout>
    </LinearLayout>
    <View
        android:id="@id/item_view"
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:visibility="gone"/>
    <RelativeLayout
        android:id="@id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:background="@color/white_F7FAFD"
        >
        <com.touguyun.view.CircleImageView
            android:id="@id/item_header"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:src="@drawable/default_header"
            />
        <TextView
            android:id="@id/item_context"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="66dp"
            android:layout_marginRight="23dp"
            android:layout_centerVertical="true"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/gray_9b9b9b"
            android:textSize="@dimen/sp_13"
            />
        </RelativeLayout>
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0.7dp"-->
        <!--android:background="@color/gray_9b9b9b"-->
        <!--/>-->
</LinearLayout>
